Minor fixes with the namespace

--- a/app/design/frontend/base/default/template/finalshop/button.phtml
+++ b/app/design/frontend/base/default/template/finalshop/button.phtml
@@ -134,7 +134,7 @@
 
 <?php
     // TODO : Move to a block class
-    $model = Mage::getModel('finalshop/product');
+    $model = Mage::getModel('magelk_finalshop/product');
     $collection = $model->getCollection();
 ?>
 <div class="warning" id="domexample" style="display:none;border: 1px solid #CCC">
